# QEDA-Router

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/4qubit/: layout.yaml
src/qeda_router/: __init__.py  astar_optimizer.py  cli.py  config_loader.py  drc.py  geometry.py  grid_model.py  metrics.py  report_writer.py  routing_templates.py  sequence_search.py  single_side_router.py  visualizer.py
tests/: test_config_loader.py  test_drc.py  test_grid_model.py  test_metrics.py  test_routing_templates.py  test_sequence_search.py  test_single_side_router.py
